fix overflow on touch devices

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -22,6 +22,7 @@ html {
     font-family: "Inter var", "Helvetica", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    -webkit-overflow-scrolling: touch;
     --font-regular: 400;
     --font-bold: 700;
     --margin: 20px;
@@ -29,7 +30,9 @@ html {
 }
 
 body {
-    margin: var(--margin-optimized) var(--margin) var(--margin);
+    position: relative;
+    margin: 0;
+    padding: var(--margin-optimized) var(--margin) var(--margin);
     overflow-x: hidden;
 }
 
